--- a/rolling/linux-aufs-git/PKGBUILD
+++ b/rolling/linux-aufs-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.13
 _srcname=linux
-pkgver=5.13.5.r18712.ge3a8beff6264.ll44
-pkgrel=2
+pkgver=5.13.8.r18715.gcba59dce4032
+pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -60,7 +60,7 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
              'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-_aufs_path="aufs-patches"
+_aufs_path="aufs-patches-v2"
 _aufs_ver="20210705"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _compiler_path="cpu-patches-sep"
@@ -315,7 +315,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'e7b2225236c69a03de7ebb2bb76111f6e6060ac6616bb5a8cb3ba6550346ce91959dd15c6acaf05641e5cc5cb5ee3ebd9129e8cbc711407d788c38ec3c4b68dc'
+            '0ae9e2f4f0edba4f9d8ce5a0a1c0126d0db3401c15d14f26da64f93c2ae1915e5f6d947c7ac68b3aeac7244c746de65f1e883222a73f000ba936198e2da98997'
             '8f7664cf380e413a2c09d3bd774059dad700de81c43e6e234f72f422c3a9f9f2e853ddcd4b0a71c91a0544f84b4a4534d7c8ef5a428b3fe395af87b6a2a22572'
             'fddbdd4897d79b2b511720400a5024731aa400dd1eb394c31046fad6f9613a8d984daf2d267d95688b1de3ee671d1a3f637866a277a98806bf6b801423d4af01'
             'd3dd3f1b9ddcc508fc73c686d72ef8c78fb7ac05fddb3e836ff0aa71e9a7be0bfabd1eedbd05b01ebfb5ad35d88a4e44b89a590eb03b2aade436a6c6cbc544cf')
