--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.13
 _srcname=linux-stable-rc
-pkgver=5.13.9.r184.g22e76c328b34
-pkgrel=0.1
+pkgver=5.13.11.r152.g8f08f2c2c72b
+pkgrel=0
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -70,9 +70,8 @@ _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
-        "${_lucjanpath}/arch-patches-v4-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v4-sep/0002-Bluetooth-btusb-check-conditions-before-enabling-USB.patch"
-        "${_lucjanpath}/arch-patches-v4-sep/0003-drm-amdgpu-handle-VCN-instances-when-harvesting.patch"
+        "${_lucjanpath}/arch-patches-v5-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v5-sep/0002-Bluetooth-btusb-check-conditions-before-enabling-USB.patch"
          # the main kernel config files
         'config')
 
@@ -320,7 +319,6 @@ done
 sha512sums=('SKIP'
             'a954cc04ac1e90e57c1a59736a81a96680e69079e4a32865ee125611ff2fdf5d873bd9f68e36839a25720cee9b11ef0ea6a230b30c2c7b37c23fbc4830fdb168'
             '8f7664cf380e413a2c09d3bd774059dad700de81c43e6e234f72f422c3a9f9f2e853ddcd4b0a71c91a0544f84b4a4534d7c8ef5a428b3fe395af87b6a2a22572'
-            'bc191829371a9210772c987ce31a33a64a228268a0319ba123353d40b41e1428870ffc814f2b03453e5e4d69fb79b9afe55dcfcd30009029cd51e1b6f4b09d78'
-            '07c09eb8eeb2fa9d84c8f38ea4789a050baea5b8b5617bca9824ba009688555a3511d82e27c8799a503328b0e3684166fb3b1417b92e986e564e90a994931610'
-            '0a5f7334690ebd8552f97f19e715b6408b3cc6e9477fe40142ac36bf1e51f4d37e525fc31cc719a5b1b9d62884010c0c5f06ea2e10d22704efa169594d475d56'
+            '7e224b2cc546f965625e5de38ac8158d2107e2ea78130843f3c0ef3b28e5342d57e6cd44062ce2db1c322708d847bb38ef11d19ce8f45cc3bb82d078b3a3fa19'
+            'f29f44e363f663244e3713481ec1386a12f91ffc3988d82c7f206f7782611410333a55af2d9efa9db33d5a45a0fe29a92e6310032efe90cc11d55a037a368747'
             'a9a397aa3137c590655a1f8bc312a02c84eb46704f2eac3a352de355809f673b1c3ad199faa8a8f147233228f489423b2c26809fe84d93ee7a7d22b1444587e7')
