--- a/rolling/linux-uksm-git/PKGBUILD
+++ b/rolling/linux-uksm-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.13
 _srcname=linux
-pkgver=5.13.10.r18717.g694b5048ebe7
+pkgver=5.13.11.r18718.g211b9970459c
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
@@ -64,7 +64,7 @@ _uksm_path="uksm-patches"
 #_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
-_compiler_path="cpu-patches-sep"
+_compiler_path="cpu-patches-v2-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-rolling-stable"
@@ -319,7 +319,7 @@ done
 
 sha512sums=('SKIP'
             'a954cc04ac1e90e57c1a59736a81a96680e69079e4a32865ee125611ff2fdf5d873bd9f68e36839a25720cee9b11ef0ea6a230b30c2c7b37c23fbc4830fdb168'
-            '8f7664cf380e413a2c09d3bd774059dad700de81c43e6e234f72f422c3a9f9f2e853ddcd4b0a71c91a0544f84b4a4534d7c8ef5a428b3fe395af87b6a2a22572'
+            'c70ed7f971548c32080bf610f0e0d99c5489bea5262945a486df9b4f0c9bde915078a1b4acd15aed0dc6d2ecee511b5a76f5d47ea88977de17e0c6ceb3cde21c'
             'bc191829371a9210772c987ce31a33a64a228268a0319ba123353d40b41e1428870ffc814f2b03453e5e4d69fb79b9afe55dcfcd30009029cd51e1b6f4b09d78'
             '07c09eb8eeb2fa9d84c8f38ea4789a050baea5b8b5617bca9824ba009688555a3511d82e27c8799a503328b0e3684166fb3b1417b92e986e564e90a994931610'
             '0a5f7334690ebd8552f97f19e715b6408b3cc6e9477fe40142ac36bf1e51f4d37e525fc31cc719a5b1b9d62884010c0c5f06ea2e10d22704efa169594d475d56'
